--- a/wordpress-traefik-letsencrypt-docker-compose.yml
+++ b/wordpress-traefik-letsencrypt-docker-compose.yml
@@ -214,7 +214,7 @@ services:
     command: >-
       sh -c 'sleep $BACKUP_INIT_SLEEP &&
       while true; do
-        mariadb-dump -h mariadb -u $WORDPRESS_DB_USER -p $WORDPRESS_DB_PASSWORD $WORDPRESS_DB_NAME | gzip > $MARIADB_BACKUPS_PATH/$MARIADB_BACKUP_NAME-$(date "+%Y-%m-%d_%H-%M").gz &&
+        mariadb-dump -h mariadb -u $WORDPRESS_DB_USER -p"$WORDPRESS_DB_PASSWORD" $WORDPRESS_DB_NAME | gzip > "$MARIADB_BACKUPS_PATH/$MARIADB_BACKUP_NAME-$(date '+%Y-%m-%d_%H-%M').gz" &&
         tar -zcpf $DATA_BACKUPS_PATH/$DATA_BACKUP_NAME-$(date "+%Y-%m-%d_%H-%M").tar.gz $DATA_PATH &&
         find $MARIADB_BACKUPS_PATH -type f -mtime +$MARIADB_BACKUP_PRUNE_DAYS | xargs rm -f &&
         find $DATA_BACKUPS_PATH -type f -mtime +$DATA_BACKUP_PRUNE_DAYS | xargs rm -f;
