WordPress with Let's Encrypt Using Docker Compose

--- a/.env
+++ b/.env
@@ -22,7 +22,8 @@ WORDPRESS_ADMIN_LASTNAME=Admin
 WORDPRESS_ADMIN_USERNAME=wordpressadmin
 WORDPRESS_ADMIN_PASSWORD=PqspCAOJrqh78i725Te8
 WORDPRESS_ADMIN_EMAIL=wordpressadmin@heyvaldemar.net
-WORDPRESS_HOSTNAME=wordpress.heyvaldemar.net
+WORDPRESS_HOSTNAME=www.heyvaldemarwp.net
+WORDPRESS_ROOT_DOMAIN=heyvaldemarwp.net
 WORDPRESS_SMTP_ADDRESS=smtp-relay.gmail.com
 WORDPRESS_SMTP_PORT=587
 WORDPRESS_SMTP_USER_NAME=wordpress@heyvaldemar.net
