--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 TRAEFIK_IMAGE_TAG=traefik:2.9
 TRAEFIK_LOG_LEVEL=WARN
 TRAEFIK_ACME_EMAIL=callvaldemar@gmail.com
-TRAEFIK_HOSTNAME=traefik.wordpress.heyvaldemar.net
+TRAEFIK_HOSTNAME=traefik.www.heyvaldemarwp.net
 # Basic Authentication for Traefik Dashboard
 # Username: traefikadmin
 # Passwords must be encoded using MD5, SHA1, or BCrypt https://hostingcanada.org/htpasswd-generator/
