WordPress with Let's Encrypt Using Docker Compose

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ TRAEFIK_IMAGE_TAG=traefik:3.2
 TRAEFIK_LOG_LEVEL=WARN
 # The email address used by Let's Encrypt for renewal notices
 TRAEFIK_ACME_EMAIL=admin@example.com
+# The hostname used to access the Traefik dashboard and to configure domain-specific rules
 TRAEFIK_HOSTNAME=traefik.www.heyvaldemarwp.net
 # Basic Authentication for Traefik Dashboard
 # Username: traefikadmin
