--- a/wordpress-traefik-letsencrypt-docker-compose.yml
+++ b/wordpress-traefik-letsencrypt-docker-compose.yml
@@ -169,7 +169,7 @@ services:
       - "traefik.http.routers.redirectdomain.entrypoints=web,websecure"
       - "traefik.http.routers.redirectdomain.middlewares=redirect-to-www"
       - "traefik.http.middlewares.redirect-to-www.redirectregex.regex=^https?://(?:www\\.)?${WORDPRESS_ROOT_DOMAIN}(.*)"
-      - "traefik.http.middlewares.redirect-to-www.redirectregex.replacement=https://${TRAEFIK_WORDPRESS_HOSTNAME}$$1"
+      - "traefik.http.middlewares.redirect-to-www.redirectregex.replacement=https://${WORDPRESS_HOSTNAME}$$1"
       - "traefik.http.middlewares.redirect-to-www.redirectregex.permanent=true"
       - "traefik.http.routers.redirectdomain.tls=true"
       - "traefik.http.routers.redirectdomain.tls.certresolver=letsencrypt"
