--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ TRAEFIK_LOG_LEVEL=WARN
 # The email address used by Let's Encrypt for renewal notices
 TRAEFIK_ACME_EMAIL=admin@example.com
 # The hostname used to access the Traefik dashboard and to configure domain-specific rules
-TRAEFIK_HOSTNAME=traefik.www.heyvaldemarwp.net
+TRAEFIK_HOSTNAME=traefik.www.heyvaldemar.net
 # Basic Authentication for Traefik Dashboard
 # Username: traefikadmin
 # Passwords must be encoded using MD5, SHA1, or BCrypt https://hostingcanada.org/htpasswd-generator/
