--- a/wordpress-traefik-letsencrypt-docker-compose.yml
+++ b/wordpress-traefik-letsencrypt-docker-compose.yml
@@ -165,14 +165,14 @@ services:
       - "traefik.http.routers.http-catchall.middlewares=redirect-to-https"
       - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
       # Domain redirection for WordPress (www and non-www)
-      - "traefik.http.routers.redirectdomain.rule=Host(`${WORDPRESS_ROOT_DOMAIN}`)"
-      - "traefik.http.routers.redirectdomain.entrypoints=web,websecure"
-      - "traefik.http.routers.redirectdomain.middlewares=redirect-to-www"
+      - "traefik.http.routers.redirect-to-www.rule=Host(`${WORDPRESS_ROOT_DOMAIN}`)"
+      - "traefik.http.routers.redirect-to-www.entrypoints=web,websecure"
+      - "traefik.http.routers.redirect-to-www.middlewares=redirect-to-www"
       - "traefik.http.middlewares.redirect-to-www.redirectregex.regex=^https?://(?:www\\.)?${WORDPRESS_ROOT_DOMAIN}(.*)"
       - "traefik.http.middlewares.redirect-to-www.redirectregex.replacement=https://${WORDPRESS_HOSTNAME}$$1"
       - "traefik.http.middlewares.redirect-to-www.redirectregex.permanent=true"
-      - "traefik.http.routers.redirectdomain.tls=true"
-      - "traefik.http.routers.redirectdomain.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.redirect-to-www.tls=true"
+      - "traefik.http.routers.redirect-to-www.tls.certresolver=letsencrypt"
     restart: unless-stopped
 
   backups:
