WordPress with Let's Encrypt Using Docker Compose

--- a/.github/workflows/00-deployment-verification.yml
+++ b/.github/workflows/00-deployment-verification.yml
@@ -48,6 +48,14 @@ jobs:
             sleep 10; \
           done'
 
+      - name: Wait for the Traefik dashboard to be ready
+        run: |
+          echo "Checking the routing and availability of the Traefik dashboard..."
+          timeout 5m bash -c 'while ! curl -fsSLk --write-out "%{http_code}" --output /dev/null "https://$APP_TRAEFIK_HOSTNAME" | grep -E "200|401"; do \
+            echo "Waiting for the application to be ready..."; \
+            sleep 10; \
+          done'
+
       - name: Inspect Network Configuration
         run: |
           docker network inspect $NETWORK_ONE
