--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ TRAEFIK_BASIC_AUTH=traefikadmin:$$2y$$10$$sMzJfirKC75x/hVpiINeZOiSm.Jkity9cn4KwN
 
 # WordPress Variables
 WORDPRESS_MARIADB_IMAGE_TAG=mariadb:11.1
-WORDPRESS_IMAGE_TAG=bitnami/wordpress:6.3.1
+WORDPRESS_IMAGE_TAG=bitnami/wordpress:latest
 WORDPRESS_DB_NAME=wordpressdb
 WORDPRESS_DB_USER=wordpressdbbuser
 WORDPRESS_DB_PASSWORD=DH8MowfpuwGyBfNcnafE
